--- a/lab3/DataStreams/DataStreams.vcxproj.filters
+++ b/lab3/DataStreams/DataStreams.vcxproj.filters
@@ -36,6 +36,30 @@
     <ClInclude Include="OutputStreams\MemoryOutputStream.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="InputStreams\Decorators\DecryptInputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="InputStreams\Decorators\SubstitutionCipherDecryptInputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="OutputStreams\Decorators\EncryptOutputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="OutputStreams\Decorators\SubstitutionCipherEncryptOutputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="InputStreams\Decorators\DecompressInputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="InputStreams\Decorators\RLEDecompressInputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="OutputStreams\Decorators\CompressOutputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="OutputStreams\Decorators\RLECompressOutputStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -51,6 +75,30 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="OutputStreams\MemoryOutputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="InputStreams\Decorators\DecryptInputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="InputStreams\Decorators\SubstitutionCipherDecryptInputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="OutputStreams\Decorators\EncryptOutputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="OutputStreams\Decorators\SubstitutionCipherEncryptOutputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="InputStreams\Decorators\DecompressInputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="InputStreams\Decorators\RLEDecompressInputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="OutputStreams\Decorators\CompressOutputStream.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="OutputStreams\Decorators\RLECompressOutputStream.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
