--- a/lab3/DataStreams/DataStreams.vcxproj.filters
+++ b/lab3/DataStreams/DataStreams.vcxproj.filters
@@ -102,4 +102,7 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
