--- a/lab5/Editor/Editor.vcxproj
+++ b/lab5/Editor/Editor.vcxproj
@@ -140,14 +140,84 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Command\AbstractCommand.h" />
+    <ClInclude Include="Command\ICommand.h" />
+    <ClInclude Include="Document\Commands\DeleteItemCommand.h" />
+    <ClInclude Include="Document\Commands\InsertImageCommand.h" />
+    <ClInclude Include="Document\Commands\InsertParagraphCommand.h" />
+    <ClInclude Include="Document\Commands\ListDocumentItemsCommand.h" />
+    <ClInclude Include="Document\Commands\SetTitleCommand.h" />
     <ClInclude Include="Document\DocumentItems\ConstDocumentItem.h" />
     <ClInclude Include="Document\DocumentItems\DocumentItem.h" />
+    <ClInclude Include="Document\DocumentItems\IBaseDocumentItem.h" />
+    <ClInclude Include="Document\HTMLDocument.h" />
     <ClInclude Include="Document\IDocument.h" />
     <ClInclude Include="Document\Image\IImage.h" />
+    <ClInclude Include="Document\Image\Image.h" />
     <ClInclude Include="Document\Paragraph\IParagraph.h" />
+    <ClInclude Include="Document\Paragraph\Paragraph.h" />
+    <ClInclude Include="Editor\Commands\EditorDeleteItemCommand\EditorDeleteItemCommand.h" />
+    <ClInclude Include="Editor\Commands\EditorInsertImageCommand\EditorInsertImageCommand.h" />
+    <ClInclude Include="Editor\Commands\EditorInsertParagraphCommand\EditorInsertParagraphCommand.h" />
+    <ClInclude Include="Editor\Commands\EditorSetTitleCommand\EditorSetTitleCommand.h" />
+    <ClInclude Include="Editor\Commands\MenuExitCommand\MenuExitCommand.h" />
+    <ClInclude Include="Editor\Commands\MenuHelpCommand\MenuHelpCommand.h" />
+    <ClInclude Include="Editor\Editor.h" />
+    <ClInclude Include="Editor\Menu.h" />
+    <ClInclude Include="History\History.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Command\AbstractCommand.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\Commands\DeleteItemCommand.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\Commands\InsertImageCommand.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\Commands\InsertParagraphCommand.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\Commands\ListDocumentItemsCommand.cpp" />
+    <ClCompile Include="Document\Commands\SetTitleCommand.cpp" />
+    <ClCompile Include="Document\DocumentItems\ConstDocumentItem.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\DocumentItems\DocumentItem.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\HTMLDocument.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\Image\Image.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\Paragraph\Paragraph.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Editor\Commands\EditorDeleteItemCommand\EditorDeleteItemCommand.cpp" />
+    <ClCompile Include="Editor\Commands\EditorInsertImageCommand\EditorInsertImageCommand.cpp" />
+    <ClCompile Include="Editor\Commands\EditorInsertParagraphCommand\EditorInsertParagraphCommand.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Editor\Commands\EditorSetTitleCommand\EditorSetTitleCommand.cpp" />
+    <ClCompile Include="Editor\Commands\MenuExitCommand\MenuExitCommand.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Editor\Commands\MenuHelpCommand\MenuHelpCommand.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Editor\Editor.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Editor\Menu.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="History\History.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
