--- a/lab5/Editor/Editor.vcxproj.filters
+++ b/lab5/Editor/Editor.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="Document\DocumentItems\Elements\Paragraph\Paragraph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Document\Commands\ReplaceTextCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Document\DocumentItems\Elements\Paragraph\Paragraph.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Document\Commands\ReplaceTextCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
