--- a/lab5/Editor/Editor.vcxproj
+++ b/lab5/Editor/Editor.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Document\Commands\InsertImageCommand.h" />
     <ClInclude Include="Document\Commands\InsertParagraphCommand.h" />
     <ClInclude Include="Document\Commands\ReplaceTextCommand.h" />
+    <ClInclude Include="Document\Commands\ResizeImageCommand.h" />
     <ClInclude Include="Document\Commands\SetTitleCommand.h" />
     <ClInclude Include="Document\DocumentItems\ConstDocumentItem.h" />
     <ClInclude Include="Document\DocumentItems\DocumentItem.h" />
@@ -182,6 +183,9 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Document\Commands\ReplaceTextCommand.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Document\Commands\ResizeImageCommand.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Document\Commands\SetTitleCommand.cpp">
