--- a/lab7/Slides/Slides.vcxproj.filters
+++ b/lab7/Slides/Slides.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="Style\FillStyle\Enumerator\FillStyleEnumerator.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Canvas\ConsoleCanvas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -123,6 +126,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Shape\GroupShape\GroupShape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Canvas\ConsoleCanvas.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
