[lab7] add smfl window and bind capture with window close event

--- a/lab7/Console_Slides/Console_Slides.vcxproj
+++ b/lab7/Console_Slides/Console_Slides.vcxproj
@@ -135,7 +135,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Console_Slides.cpp" />
+    <ClCompile Include="Console_Slides.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Slides\Slides.vcxproj">
