--- a/lab7/Slides/Slides.vcxproj.filters
+++ b/lab7/Slides/Slides.vcxproj.filters
@@ -96,6 +96,12 @@
     <ClInclude Include="Canvas\SFMLCanvas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Slide\ISlide.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SFMLMath\Math.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -141,6 +147,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Canvas\SFMLCanvas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SFMLMath\Math.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
